manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "askcluster1"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "askcluster1"
    spec:
      containers:
        - name: "askcluster1"
          image: "acruttam.azurecr.io/askcluster1"
          ports:
          - containerPort: 8080
